--- a/m_3_bootstrap_website/contact us.html
+++ b/m_3_bootstrap_website/contact us.html
@@ -1,97 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles/contact-us.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link rel="stylesheet" href="./styles/styles.css">
 
-    <title>Contact Us</title>
+  <title>The Local Library</title>
 </head>
 
 <body class="bg-dark text-white">
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="./index.html">
-                <img src="./assets/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">Local Library</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Categories
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-dark">
-                      <li><a class="dropdown-item" href="#">Novels</a></li>
-                      <li><a class="dropdown-item" href="#">History</a></li>
-                      <li><a class="dropdown-item" href="#">Food</a></li>
-                      <li><a class="dropdown-item" href="#">Sceince</a></li>
-                      <li><a class="dropdown-item" href="#">Religion</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./checkout page.html">Checkout</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./single page.html">Single Book Page</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./All Book Page.html">Store</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./contact us.html">Contact Us</a>
-                  </li>
+  <header>
+<!---------------------------------------- Navigation Bar---------------------------------------->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html">
+          <img src="./assets/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">Local Library</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+          </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categories</a>
+                <ul class="dropdown-menu dropdown-menu-dark">
+                  <li><a class="dropdown-item" href="#">Novels</a></li>
+                  <li><a class="dropdown-item" href="#">History</a></li>
+                  <li><a class="dropdown-item" href="#">Food</a></li>
+                  <li><a class="dropdown-item" href="#">Sceince</a></li>
+                  <li><a class="dropdown-item" href="#">Religion</a></li>
                 </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn btn-secondary" type="submit">Search</button>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./All Book Page.html">Store</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./single page.html">Single Book Page</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contact us.html">Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./checkout page.html">Checkout</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn btn-secondary" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+<!---------------------------------------- Home Hero ---------------------------------------->
+        <div id="home_hero" class="container-fluid d-flex justify-content-center align-items-center">
+          <div class="w-70">
+                <form>
+                    <div class=" m-5 p-4 rounded-bottom bg-dark text-white">
+                        <h1 class="text-center ">Subscribe to follow our last editions</h1>
+                      <label for="exampleInputEmail1" class="form-label d-none">Email address</label>
+                      <input type="email" class="form-control mt-4" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Your Email">
+                      <div id="emailHelp" class="form-text ">We'll never share your email with anyone else.</div>
+                    <div class="d-flex justify-content-center">
+                        <button type="submit" class="btn btn-secondary m-4">Subscribe</button>
+                    </div>
+                    </div>
                 </form>
-              </div>
-            </div>
-        </nav>
-        <div id="store_hero" class="container-fluid d-flex justify-content-center align-items-center">
-            <div class=" m-5 p-4 w-25 rounded-bottom bg-dark text-white">
-                <h1 class="text-center ">Contact Us</h1>
-            </div>
+          </div>
         </div>
-    </header>
+  </header>
+<!---------------------------------------- Main Body ---------------------------------------->
+  <main class="m-5 bg-dark text-white">
+    <h2 class="text-center">Top Selling Books</h2>
+    <hr>
 
-    <main>
-        <h3 class="text-center mt-5">Submit Your Request
-        </h3>
-        <hr>
-        <div id="contact_hero" class="container-fluid mt-5 mb-5">
-            <div class="mb-5">
-                <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    <div id="top_books" class="mt-5 row">
+<!---------------------------------------- Book 1 ---------------------------------------->
+      <div class="card mb-4 bg-dark text-white">
+        <div class="row">
+          <div class="col-md-1" style="max-width: 540px;">
+            <img src="./assets/3.jfif" class="img-fluid rounded-start p-1">
               </div>
-              <div class="mb-5">
-                <label for="exampleFormControlTextarea1" class="form-label">Write your message:</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
-              </div>
-              <div class="card-body mt-5 d-flex justify-content-center ">
-                <button type="button" class="btn btn-secondary btn-lg">Submit</button>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Book Title 1</h5>
+              <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. .</p>
+              <span class="badge text-bg-secondary">20 $</span>
             </div>
+          </div>
         </div>
-    </main>
-
-    <footer class="bg-black text-white">
-        <div class="container-fluid d-flex flex-column  align-items-center">
-            <a href="mailto:library@example.com" class="mt-3" >Library@example.com</a>
-            <a href="tel:+96223456789" class="mt-3" >+96223 456 789</a>
-            <p class="mt-5">&copy; Copyright 2022. All Rights Reserved.</p>
-    
+      </div>
+<!---------------------------------------- Book 2 ---------------------------------------->
+    <div class="card mb-4 bg-dark text-white">
+      <div class="row">
+        <div class="col-md-1" style="max-width: 540px;">
+          <img src="./assets/5.jfif" class="img-fluid rounded-start p-1">
         </div>
-    </footer>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Book Title 2</h5>
+            <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. .</p>
+            <span class="badge text-bg-secondary">20 $</span>
+          </div>
+        </div>
+      </div>
+    </div>
+<!---------------------------------------- Book 3 ---------------------------------------->
+    <div class="card mb-4 bg-dark text-white">
+      <div class="row">
+        <div class="col-md-1" style="max-width: 540px;">
+          <img src="./assets/3.jfif" class="img-fluid rounded-start p-1">
+            </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Book Title 1</h5>
+            <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. .</p>
+            <span class="badge text-bg-secondary">20 $</span>
+          </div>
+        </div>
+      </div>
+    </div>
+<!---------------------------------------- Book 4 ---------------------------------------->
+    <div class="card mb-4 bg-dark text-white">
+      <div class="row">
+        <div class="col-md-1" style="max-width: 540px;">
+          <img src="./assets/5.jfif" class="img-fluid rounded-start p-1">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Book Title 2</h5>
+            <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. .</p>
+            <span class="badge text-bg-secondary">20 $</span>
+          </div>
+        </div>
+      </div>
+    </div>
+<!---------------------------------------- Book 5 ---------------------------------------->
+    <div class="card mb-4 bg-dark text-white">
+      <div class="row">
+        <div class="col-md-1" style="max-width: 540px;">
+          <img src="./assets/3.jfif" class="img-fluid rounded-start p-1">
+            </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Book Title 1</h5>
+            <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. .</p>
+            <span class="badge text-bg-secondary">20 $</span>
+          </div>
+        </div>
+      </div>
+    </div>
+<!---------------------------------------- Book 6 ---------------------------------------->
+    <div class="card mb-4 bg-dark text-white">
+      <div class="row">
+        <div class="col-md-1" style="max-width: 540px;">
+          <img src="./assets/5.jfif" class="img-fluid rounded-start p-1">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Book Title 2</h5>
+            <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. .</p>
+            <span class="badge text-bg-secondary">20 $</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+<!---------------------------------------- Footer ---------------------------------------->
+  <footer class="bg-black text-white">
+    <div class="container-fluid d-flex flex-column  align-items-center">
+      <a href="mailto:library@example.com" class="mt-3" >Library@example.com</a>
+      <a href="tel:+96223456789" class="mt-3" >+96223 456 789</a>
+      <p class="mt-5">&copy; Copyright 2022. All Rights Reserved.</p>
+    </div>
+  </footer>
 
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
