--- a/m_3_bootstrap_website/single page.html
+++ b/m_3_bootstrap_website/single page.html
@@ -1,101 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-        <link rel="stylesheet" href="./styles/single-page.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link rel="stylesheet" href="./styles/single-page.css">
 
-        <title>Book Title</Title> </title>
-    </head>
+  <title>Book Title</Title>
+</head>
 
-    <body class="bg-dark text-white">
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="./index.html">
-                    <img src="./assets/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">Local Library</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Categories
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-dark">
-                          <li><a class="dropdown-item" href="#">Novels</a></li>
-                          <li><a class="dropdown-item" href="#">History</a></li>
-                          <li><a class="dropdown-item" href="#">Food</a></li>
-                          <li><a class="dropdown-item" href="#">Sceince</a></li>
-                          <li><a class="dropdown-item" href="#">Religion</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./checkout page.html">Checkout</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./single page.html">Single Book Page</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./All Book Page.html">Store</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="./contact us.html">Contact Us</a>
-                      </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn btn-secondary" type="submit">Search</button>
-                    </form>
-                  </div>
-                </div>
-            </nav>
-            <div id="store_hero" class="container-fluid d-flex justify-content-center align-items-center">
-                <div class=" m-5 p-4 rounded-bottom bg-dark text-white">
-                    <!--the width of hero will change depend on the number of book title words-->
-                    <h1 class="text-center ">Les Misérables</h1>
-                </div>
-            </div>
-        </header>
+<body class="bg-dark text-white">
+  <header>
 
-        <main>
-            <hr>
-            <div id="book_hero" class="container-fluid mt-5 mb-5 d-flex justify-content-center ">
-                <div id="card" class="card bg-dark text-white border border-light">
-                    <img src="./assets/5.jpg" class="card-img-top border border-light">
-                    <div class="card-body border border-light">
-                      <h5 class="card-title ">Les Misérables<Title></Title></h5>
-                      <p class="card-text ">Book Discription: Victor Hugo's tale of injustice, heroism and love follows the fortunes of Jean Valjean, an escaped convict determined to put his criminal past behind him. But his attempts to become a respected member of the community are constantly put under threat </p>
-                    </div>
-                    <ul class="list-group list-group-flush border border-light">
-                        <li class="list-group-item bg-dark text-white border border-light">The Author: Victor Hugo</li>
-                      <li class="list-group-item bg-dark text-white border border-light">Publication Date: 1862</li>
-                    </ul>
-                    <div class="card-body d-flex justify-content-center border border-light">
-                        <button type="button" class="btn btn-secondary btn-lg">Add To Cart</button>
-                    </div>
-                  </div>
-            </div>
+<!---------------------------------------- Navigation Bar---------------------------------------->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html">
+          <img src="./assets/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">Local Library</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+          </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categories</a>
+                <ul class="dropdown-menu dropdown-menu-dark">
+                  <li><a class="dropdown-item" href="#">Novels</a></li>
+                  <li><a class="dropdown-item" href="#">History</a></li>
+                  <li><a class="dropdown-item" href="#">Food</a></li>
+                  <li><a class="dropdown-item" href="#">Sceince</a></li>
+                  <li><a class="dropdown-item" href="#">Religion</a></li>
+                </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./All Book Page.html">Store</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./single page.html">Single Book Page</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contact us.html">Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./checkout page.html">Checkout</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn btn-secondary" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+<!---------------------------------------- Page Hero ---------------------------------------->
+    <div id="store_hero" class="container-fluid d-flex justify-content-center align-items-center">
+      <div class=" m-5 p-4 rounded-bottom bg-dark text-white">
+<!------- the width of hero will change depend on the number of book title words ----->
+        <h1 class="text-center ">Les Misérables</h1>
+      </div>
+    </div>
+  </header>
+<!---------------------------------------- Main Body ---------------------------------------->
+  <main>
+    <hr>
+    <div id="book_hero" class="container-fluid mt-5 mb-5 d-flex justify-content-center ">
+      <div id="card" class="card bg-dark text-white border border-light">
+        <img src="./assets/5.jpg" class="card-img-top border border-light">
+        <div class="card-body border border-light">
+          <h5 class="card-title ">Les Misérables<Title></Title></h5>
+          <p class="card-text ">Book Discription: Victor Hugo's tale of injustice, heroism and love follows the fortunes of Jean Valjean, an escaped convict determined to put his criminal past behind him. But his attempts to become a respected member of the community are constantly put under threat </p>
+        </div>
+        <ul class="list-group list-group-flush border border-light">
+          <li class="list-group-item bg-dark text-white border border-light">The Author: Victor Hugo</li>
+          <li class="list-group-item bg-dark text-white border border-light">Publication Date: 1862</li>
+        </ul>
+        <div class="card-body d-flex justify-content-center border border-light">
+          <button type="button" class="btn btn-secondary btn-lg">Add To Cart</button>
+        </div>
+      </div>
+    </div> 
+  </main>
+<!---------------------------------------- Footer ---------------------------------------->
+<footer class="bg-black text-white">
+  <div class="container-fluid d-flex flex-column  align-items-center">
+    <a href="mailto:library@example.com" class="mt-3" >Library@example.com</a>
+    <a href="tel:+96223456789" class="mt-3" >+96223 456 789</a>
+    <p class="mt-5">&copy; Copyright 2022. All Rights Reserved.</p>
+  </div>
+</footer>
 
-        </main>
-
-        <footer class="bg-black text-white">
-            <div class="container-fluid d-flex flex-column  align-items-center">
-                <a href="mailto:library@example.com" class="mt-3" >Library@example.com</a>
-                <a href="tel:+96223456789" class="mt-3" >+96223 456 789</a>
-                <p class="mt-5">&copy; Copyright 2022. All Rights Reserved.</p>
-        
-            </div>
-        </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
