Update All Book Page.html

--- a/m_3_bootstrap_website/All Book Page.html
+++ b/m_3_bootstrap_website/All Book Page.html
@@ -89,20 +89,9 @@
         </div>
 <!---------------------------------------- Main Page ---------------------------------------->
         <div class="col-10 mt-5 mb-5">
-          <div class="row row-cols-1 row-cols-md-5 g-5">
-            <div class="col">
-              <div class="card col-md-10 bg-dark text-white" id="card_boarder">
-               <img src="./assets/3.jfif" class="card-img-top">
-               <div class="card-body">
-                <h5 class="card-title">Book Titles 1</h5>
-                <h6>Auther: Lorem Ipsum</h6>
-                <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <span class="badge text-bg-secondary">20 $</span>
-               </div>
-              </div>
-            </div>
+          <div class="row row-cols-xxl-4 row-cols-xl-3 row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
 <!---------------------------------------- Book Number 1 ---------------------------------------->
-            <div class="col">
+            <div class="col mb-5">
               <div class="card col-md-10 bg-dark text-white" id="card_boarder">
                <img src="./assets/3.jfif" class="card-img-top">
                <div class="card-body">
@@ -114,11 +103,11 @@
               </div>
             </div>
 <!---------------------------------------- Book Number 2 ---------------------------------------->
-            <div class="col">
+            <div class="col mb-5">
               <div class="card col-md-10 bg-dark text-white" id="card_boarder">
                <img src="./assets/3.jfif" class="card-img-top">
                <div class="card-body">
-                <h5 class="card-title">Book Titles 1</h5>
+                <h5 class="card-title">Book Titles 2</h5>
                 <h6>Auther: Lorem Ipsum</h6>
                 <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <span class="badge text-bg-secondary">20 $</span>
@@ -126,23 +115,23 @@
               </div>
             </div>
 <!---------------------------------------- Book Number 3 ---------------------------------------->
-            <div class="col">
+            <div class="col mb-5">
               <div class="card col-md-10 bg-dark text-white" id="card_boarder">
                <img src="./assets/3.jfif" class="card-img-top">
                <div class="card-body">
-                <h5 class="card-title">Book Titles 1</h5>
+                <h5 class="card-title">Book Titles 3</h5>
                 <h6>Auther: Lorem Ipsum</h6>
                 <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <span class="badge text-bg-secondary">20 $</span>
                </div>
               </div>
-<!---------------------------------------- Book Number 4 ---------------------------------------->
             </div>
-            <div class="col">
+<!---------------------------------------- Book Number 4 ---------------------------------------->
+            <div class="col mb-5">
               <div class="card col-md-10 bg-dark text-white" id="card_boarder">
                <img src="./assets/3.jfif" class="card-img-top">
                <div class="card-body">
-                <h5 class="card-title">Book Titles 1</h5>
+                <h5 class="card-title">Book Titles 4</h5>
                 <h6>Auther: Lorem Ipsum</h6>
                 <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <span class="badge text-bg-secondary">20 $</span>
@@ -150,11 +139,11 @@
               </div>
             </div>
 <!---------------------------------------- Book Number 5 ---------------------------------------->
-            <div class="col">
+            <div class="col mb-5">
               <div class="card col-md-10 bg-dark text-white" id="card_boarder">
                <img src="./assets/3.jfif" class="card-img-top">
                <div class="card-body">
-                <h5 class="card-title">Book Titles 1</h5>
+                <h5 class="card-title">Book Titles 5</h5>
                 <h6>Auther: Lorem Ipsum</h6>
                 <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <span class="badge text-bg-secondary">20 $</span>
@@ -162,11 +151,11 @@
               </div>
             </div>
 <!---------------------------------------- Book Number 6 ---------------------------------------->
-            <div class="col">
+            <div class="col mb-5">
               <div class="card col-md-10 bg-dark text-white" id="card_boarder">
                <img src="./assets/3.jfif" class="card-img-top">
                <div class="card-body">
-                <h5 class="card-title">Book Titles 1</h5>
+                <h5 class="card-title">Book Titles 6</h5>
                 <h6>Auther: Lorem Ipsum</h6>
                 <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <span class="badge text-bg-secondary">20 $</span>
@@ -174,11 +163,11 @@
               </div>
             </div>
 <!---------------------------------------- Book Number 7 ---------------------------------------->
-            <div class="col">
+            <div class="col mb-5">
               <div class="card col-md-10 bg-dark text-white" id="card_boarder">
                <img src="./assets/3.jfif" class="card-img-top">
                <div class="card-body">
-                <h5 class="card-title">Book Titles 1</h5>
+                <h5 class="card-title">Book Titles 7</h5>
                 <h6>Auther: Lorem Ipsum</h6>
                 <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <span class="badge text-bg-secondary">20 $</span>
@@ -186,11 +175,11 @@
               </div>
             </div>
 <!---------------------------------------- Book Number 8 ---------------------------------------->
-            <div class="col">
+            <div class="col mb-5">
               <div class="card col-md-10 bg-dark text-white" id="card_boarder">
                <img src="./assets/3.jfif" class="card-img-top">
                <div class="card-body">
-                <h5 class="card-title">Book Titles 1</h5>
+                <h5 class="card-title">Book Titles 8</h5>
                 <h6>Auther: Lorem Ipsum</h6>
                 <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <span class="badge text-bg-secondary">20 $</span>
@@ -198,11 +187,11 @@
               </div>
             </div>
 <!---------------------------------------- Book Number 9 ---------------------------------------->
-            <div class="col">
+            <div class="col mb-5">
               <div class="card col-md-10 bg-dark text-white" id="card_boarder">
                <img src="./assets/3.jfif" class="card-img-top">
                <div class="card-body">
-                <h5 class="card-title">Book Titles 1</h5>
+                <h5 class="card-title">Book Titles 9</h5>
                 <h6>Auther: Lorem Ipsum</h6>
                 <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <span class="badge text-bg-secondary">20 $</span>
@@ -210,11 +199,11 @@
               </div>
             </div>
 <!---------------------------------------- Book Number 10 ---------------------------------------->
-            <div class="col">
+            <div class="col mb-5">
               <div class="card col-md-10 bg-dark text-white" id="card_boarder">
                <img src="./assets/3.jfif" class="card-img-top">
                <div class="card-body">
-                <h5 class="card-title">Book Titles 1</h5>
+                <h5 class="card-title">Book Titles 10</h5>
                 <h6>Auther: Lorem Ipsum</h6>
                 <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <span class="badge text-bg-secondary">20 $</span>
@@ -222,11 +211,11 @@
               </div>
             </div>
 <!---------------------------------------- Book Number 11 ---------------------------------------->
-            <div class="col">
+            <div class="col mb-5">
               <div class="card col-md-10 bg-dark text-white" id="card_boarder">
                <img src="./assets/3.jfif" class="card-img-top">
                <div class="card-body">
-                <h5 class="card-title">Book Titles 1</h5>
+                <h5 class="card-title">Book Titles 11</h5>
                 <h6>Auther: Lorem Ipsum</h6>
                 <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <span class="badge text-bg-secondary">20 $</span>
@@ -234,11 +223,11 @@
               </div>
             </div>
 <!---------------------------------------- Book Number 12 ---------------------------------------->
-            <div class="col">
+            <div class="col mb-5">
               <div class="card col-md-10 bg-dark text-white" id="card_boarder">
                <img src="./assets/3.jfif" class="card-img-top">
                <div class="card-body">
-                <h5 class="card-title">Book Titles 1</h5>
+                <h5 class="card-title">Book Titles 12</h5>
                 <h6>Auther: Lorem Ipsum</h6>
                 <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <span class="badge text-bg-secondary">20 $</span>
@@ -246,11 +235,11 @@
               </div>
             </div>
 <!---------------------------------------- Book Number 13 ---------------------------------------->
-            <div class="col">
+            <div class="col mb-5">
               <div class="card col-md-10 bg-dark text-white" id="card_boarder">
                <img src="./assets/3.jfif" class="card-img-top">
                <div class="card-body">
-                <h5 class="card-title">Book Titles 1</h5>
+                <h5 class="card-title">Book Titles 13</h5>
                 <h6>Auther: Lorem Ipsum</h6>
                 <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <span class="badge text-bg-secondary">20 $</span>
@@ -258,17 +247,30 @@
               </div>
             </div>
 <!---------------------------------------- Book Number 14 ---------------------------------------->
-            <div class="col">
+            <div class="col mb-5">
               <div class="card col-md-10 bg-dark text-white" id="card_boarder">
                <img src="./assets/3.jfif" class="card-img-top">
                <div class="card-body">
-                <h5 class="card-title">Book Titles 1</h5>
+                <h5 class="card-title">Book Titles 14</h5>
                 <h6>Auther: Lorem Ipsum</h6>
                 <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 <span class="badge text-bg-secondary">20 $</span>
                </div>
               </div>
             </div>
+<!---------------------------------------- Book Number 15 ---------------------------------------->
+            <div class="col mb-5">
+              <div class="card col-md-10 bg-dark text-white" id="card_boarder">
+               <img src="./assets/3.jfif" class="card-img-top">
+               <div class="card-body">
+                <h5 class="card-title">Book Titles 15</h5>
+                <h6>Auther: Lorem Ipsum</h6>
+                <p class="card-text">Book Discription: Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <span class="badge text-bg-secondary">20 $</span>
+               </div>
+              </div>
+            </div>
+<!---------------------------------------- End of Book Section ---------------------------------------->
           </div>
         </div>
       </div>
